opam-version: "2.0"
version: "0.0.1"
synopsis: "Demo of OCaml Project using Nix"
description: """
Using Nix with OCaml!
"""
maintainer: "roger.qiu@matrix.ai"
authors: ["Roger Qiu"]
license: "APL-2.0"
homepage: "https://github.com/MatrixAI/OCaml-Demo"
bug-reports: "https://github.com/MatrixAI/OCaml-Demo/issues"
dev-repo: "https://github.com/MatrixAI/OCaml-Demo.git"
depends: [ "dune" "core" ]
build: [ "dune" "build" "-p" name ]
available: [ ocaml-version >= "4.07.0" ]
